# chatApp

./: .gitignore  Dockerfile  auth.py  db.json  db.py  defs.py  main.py  pyproject.toml
app/: auth.py  db.py  db_defs.py  defs.py  main.py
test/: db.json  test_main.py
