[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["anonymous123-code <61744596+anonymous123-code@users.noreply.github.com>"]

[tool.poetry.dependencies]
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = {extras = ["all"], version = "^0.73.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python = "^3.8"
pytest = "^6.2.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "test_users: configures the users added by add_test_users fixture",
    "token_test_user_index: configures the index of the testuser to genereate the token for"
]